<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp"
    >


    <EditText
        android:id="@+id/editTextTextToConvert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_field_hint"

        />

    <Button
        android:id="@+id/ceaserEncryptButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ceaser_encrypt_button"
        android:paddingVertical="14dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/ceaserDecryptButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ceaser_decrypt_button"
        android:paddingVertical="14dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/rot13EncryptButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rot_13_encrypt_button"
        android:paddingVertical="14dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/rot13DecryptButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rot_13_decrypt_button"
        android:paddingVertical="14dp"
        android:layout_marginTop="8dp"
        />
</LinearLayout>